test: добавление тестов на Таски и Эпики