@@ -2,16 +2,16 @@ package tests;
 
 import manager.TaskManager;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
 import taskTypes.Epic;
 import taskTypes.Subtask;
 import taskTypes.Task;
 import taskTypes.TaskStatus;
 
 import java.time.LocalDateTime;
+import org.junit.jupiter.api.Test;
+import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.*;
 
 public abstract class TaskManagerTest<T extends TaskManager> {
 
@@ -42,8 +42,64 @@ public abstract class TaskManagerTest<T extends TaskManager> {
     void createNewTaskTest(){
         taskManager.deleteAllTaskTypes();
         taskManager.createNewTask(task);
-        final Task savedTask = taskManager.getAllTasks().get(0);
+        final Task savedTask = taskManager.getAllTasks().getFirst();
         assertNotNull(savedTask, "Задача не найдена");
         assertEquals(task, savedTask, "Задачи не совпадают");
+    }
+
+    @Test
+    void printTaskListTest(){
+        taskManager.deleteAllTaskTypes();
+        taskManager.createNewTask(task);
+        final List<Task> tasks = taskManager.getAllTasks();
+        assertNotNull(tasks, "Задачи не возращаются");
+        assertEquals(1, tasks.size(), "Неправильный размер списка");
+        assertEquals(task, tasks.getFirst(), "Задачи не совпадают");
+    }
+
+    @Test
+    void returnNoTasksIfListIsEmptyTest(){
+        taskManager.deleteAllTaskTypes();
+        final List<Task> tasks = taskManager.getAllTasks();
+        assertTrue(tasks.isEmpty(), "Список не пустой");
+    }
+
+    @Test
+    void throwNullPointerExceptionWithEmptyListTest(){
+        var nullPointerException = assertThrows(NullPointerException.class, () ->
+                taskManager.createNewTask(null));
+        assertNull(nullPointerException.getMessage());
+    }
+
+    @Test
+    void createNewEpicTest(){
+        taskManager.deleteAllTaskTypes();
+        taskManager.createNewEpic(epic);
+        final Epic savedEpic = taskManager.getEpicById(epic.getId());
+        assertNotNull(savedEpic, "Эпик не найден");
+        assertEquals(epic, savedEpic, "Эпики не совпадают");
+    }
+
+    @Test
+    void printEpicListTest(){
+        taskManager.deleteAllTaskTypes();
+        taskManager.createNewEpic(epic);
+        final List<Epic> epics = taskManager.getAllEpics();
+        assertNotNull(epics, "Список эпиков не возращается");
+        assertEquals(1, epics.size(), "Неправильный размер списка");
+        assertEquals(epic, epics.getFirst(), "Элементы не равны");
+    }
+
+    @Test
+    void throwNullPointerExceptionIfEpicListIsEmptyTest(){
+        var nullPointerException = assertThrows(NullPointerException.class, () -> taskManager.createNewEpic(null));
+        assertNull(nullPointerException.getMessage());
+    }
+
+    @Test
+    void returnEmptyListIfNoEpicsTest(){
+        taskManager.deleteAllTaskTypes();
+        final List<Epic> epics = taskManager.getAllEpics();
+        assertTrue(epics.isEmpty(), "Неправильный размер списка");
     }
 }
